<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/DashboardFragment">

    <fragment
        android:id="@+id/DashboardFragment"
        android:name="com.example.rescueapplication.screens.dashboard.DashboardFragment"
        android:label="@string/dashboard_fragment_label"
        tools:layout="@layout/fragment_dashboard">

        <action
            android:id="@+id/action_DashboardFragment_to_ListJournalFragment"
            app:destination="@id/ListJournalFragment"
            app:launchSingleTop="true"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_DashboardFragment_to_sessionListFragment"
            app:destination="@id/sessionListFragment" />
    </fragment>
    <fragment
        android:id="@+id/ListJournalFragment"
        android:name="com.example.rescueapplication.screens.journals.ListJournalFragment"
        android:label="@string/journal_list_fragment_label"
        tools:layout="@layout/fragment_list_journal">

        <action
            android:id="@+id/action_ListJournalFragment_to_DashboardFragment"
            app:destination="@id/DashboardFragment"
            app:launchSingleTop="true"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_ListJournalFragment_to_inputJournalFragment"
            app:destination="@id/inputJournalFragment"
            app:launchSingleTop="true"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_ListJournalFragment_to_viewJournalFragment"
            app:destination="@id/viewJournalFragment" />
        <action
            android:id="@+id/action_ListJournalFragment_pop_including_inputJournalFragment"
            app:popUpTo="@id/inputJournalFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/inputJournalFragment"
        android:name="com.example.rescueapplication.screens.input.InputJournalFragment"
        android:label="Journal"
        tools:layout="@layout/fragment_input_journal" >
        <action
            android:id="@+id/action_inputJournalFragment_to_ListJournalFragment"
            app:destination="@id/ListJournalFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popUpTo="@+id/DashboardFragment"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/viewJournalFragment"
        android:name="com.example.rescueapplication.screens.journals.ViewJournalFragment"
        android:label="Details"
        tools:layout="@layout/fragment_view_journal" >

        <argument
            android:name="title"
            app:argType="string"
            android:defaultValue="" />

    </fragment>
    <fragment
        android:id="@+id/sessionListFragment"
        android:name="com.example.rescueapplication.screens.sessions.SessionListFragment"
        android:label="@string/sess_list"
        tools:layout="@layout/fragment_session_list">
        <action
            android:id="@+id/action_sessionListFragment_to_loveFragment"
            app:destination="@id/loveFragment" />
        <action
            android:id="@+id/action_sessionListFragment_to_angerFragment"
            app:destination="@id/angerFragment" />
        <action
            android:id="@+id/action_sessionListFragment_to_anxietyFragment"
            app:destination="@id/anxietyFragment" />
        <action
            android:id="@+id/action_sessionListFragment_to_depressionFragment"
            app:destination="@id/depressionFragment" />
        <action
            android:id="@+id/action_sessionListFragment_to_fearFragment"
            app:destination="@id/fearFragment" />
        <action
            android:id="@+id/action_sessionListFragment_to_healingFragment"
            app:destination="@id/healingFragment" />
        <action
            android:id="@+id/action_sessionListFragment_to_peaceFragment"
            app:destination="@id/peaceFragment" />
        <action
            android:id="@+id/action_sessionListFragment_to_patienceFragment"
            app:destination="@id/patienceFragment" />
        <action
            android:id="@+id/action_sessionListFragment_to_stressFragment"
            app:destination="@id/stressFragment" />
        <action
            android:id="@+id/action_sessionListFragment_to_hopeFragment"
            app:destination="@id/hopeFragment" />
    </fragment>
    <fragment
        android:id="@+id/loveFragment"
        android:name="com.example.rescueapplication.screens.sessions.fragments.LoveFragment"
        android:label="@string/love_txt"
        tools:layout="@layout/fragment_love" />
    <fragment
        android:id="@+id/angerFragment"
        android:name="com.example.rescueapplication.screens.sessions.fragments.AngerFragment"
        android:label="@string/ang_txt"
        tools:layout="@layout/fragment_anger" />
    <fragment
        android:id="@+id/anxietyFragment"
        android:name="com.example.rescueapplication.screens.sessions.fragments.AnxietyFragment"
        android:label="@string/anxiety_txt"
        tools:layout="@layout/fragment_anxiety" />
    <fragment
        android:id="@+id/depressionFragment"
        android:name="com.example.rescueapplication.screens.sessions.fragments.DepressionFragment"
        android:label="@string/depress_txt"
        tools:layout="@layout/fragment_depression" />
    <fragment
        android:id="@+id/fearFragment"
        android:name="com.example.rescueapplication.screens.sessions.fragments.FearFragment"
        android:label="@string/fear_txt"
        tools:layout="@layout/fragment_fear" />
    <fragment
        android:id="@+id/healingFragment"
        android:name="com.example.rescueapplication.screens.sessions.fragments.HealingFragment"
        android:label="@string/heal_txt"
        tools:layout="@layout/fragment_healing" />
    <fragment
        android:id="@+id/hopeFragment"
        android:name="com.example.rescueapplication.screens.sessions.fragments.HopeFragment"
        android:label="@string/hope_txt"
        tools:layout="@layout/fragment_hope" />
    <fragment
        android:id="@+id/patienceFragment"
        android:name="com.example.rescueapplication.screens.sessions.fragments.PatienceFragment"
        android:label="@string/pati_txt"
        tools:layout="@layout/fragment_patience" />
    <fragment
        android:id="@+id/peaceFragment"
        android:name="com.example.rescueapplication.screens.sessions.fragments.PeaceFragment"
        android:label="@string/peace_txt"
        tools:layout="@layout/fragment_peace" />
    <fragment
        android:id="@+id/stressFragment"
        android:name="com.example.rescueapplication.screens.sessions.fragments.QuotesFragment"
        android:label="@string/stress_txt"
        tools:layout="@layout/fragment_quotes" />
</navigation>