<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.dashboard.DashboardFragment">

    <ImageView
        android:id="@+id/love_shape"
        android:layout_width="176dp"
        android:layout_height="176dp"
        android:src="@drawable/love_heart"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>

    <ScrollView
        android:id="@+id/SView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

            <TextView
                android:id="@+id/journal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/journal"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@id/safeTv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/safeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safe_txt"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/journal" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardReflect"
                android:layout_width="0dp"
                android:layout_height="185dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/safeTv">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cardConstraint1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/reflectTv"
                        style="@style/Widget.MaterialComponents.TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reflect_you"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/ic_book"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <Button
                        android:id="@+id/write_btn"
                        style="@style/Widget.AppCompat.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/write_btn"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/reflectTv" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/rescue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/rescue_s"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardReflect" />

            <TextView
                android:id="@+id/miniSessionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mini_sess"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rescue" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardRescue"
                android:layout_width="0dp"
                android:layout_height="185dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/miniSessionTv">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cardConstraint2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/rescueTv"
                        style="@style/Widget.MaterialComponents.TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/feeling_qn"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageRescue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/ic_neutral_face"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/rescueBtn"
                        style="@style/Widget.AppCompat.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/take_rescue"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/rescueTv" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>






        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>
</LinearLayout>